[gd_scene load_steps=9 format=3 uid="uid://crv026skr5aaj"]

[ext_resource type="Texture2D" uid="uid://sbh5x7n1cu4a" path="res://graphics/player/player.png" id="1_gseue"]
[ext_resource type="Script" path="res://scenes/Player/player.gd" id="1_xwv05"]
[ext_resource type="Texture2D" uid="uid://corredcm7ut8a" path="res://graphics/decals/white.png" id="3_24og8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y2yur"]
radius = 65.0077

[sub_resource type="Gradient" id="Gradient_75tvs"]
offsets = PackedFloat32Array(0.319372, 1)
colors = PackedColorArray(0, 1, 1, 0.52549, 0.643137, 1, 0.996078, 0.117647)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_n547a"]
gradient = SubResource("Gradient_75tvs")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g3k3s"]
emission_shape = 3
emission_box_extents = Vector3(5, 15, 1)
particle_flag_disable_z = true
spread = 50.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 400.0
initial_velocity_max = 700.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.3
scale_max = 0.6
color_ramp = SubResource("GradientTexture1D_n547a")
turbulence_noise_strength = 0.0
turbulence_noise_scale = 1.3

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_et010"]
polygon = PackedVector2Array(26, -58, 30, -52, 40, -44, 41, -40, 46, -32, 52, -32, 59, -29, 75, -16, 84, -17, 88, -17, 97, -11, 108, -11, 112, -8, 114, -6, 124, -7, 125, -5, 124, -1, 129, -4, 132, -2, 134, 2, 135, 4, 136, 14, 135, 18, 132, 22, 130, 23, 127, 23, 126, 22, 124, 22, 125, 27, 123, 28, 115, 29, 111, 27, 105, 35, 101, 36, 100, 39, 100, 42, 99, 45, 96, 46, 68, 49, 65, 47, 63, 43, 66, 39, 64, 38, 48, 38, 46, 38, 43, 41, 39, 43, 30, 46, 28, 46, 24, 50, 19, 53, 10, 59, 2, 61, -6, 63, -20, 63, -29, 59, -31, 56, -32, 51, -37, 45, -39, 39, -46, 35, -48, 33, -50, 27, -49, 24, -49, 21, -53, 19, -56, 14, -57, 13, -58, 10, -60, 6, -60, 3, -59, -2, -60, -7, -60, -14, -58, -20, -55, -24, -54, -32, -49, -38, -44, -41, -40, -43, -35, -44, -32, -42, -31, -47, -27, -50, -21, -54, -16, -54, -15, -52, -12, -55, -6, -58, 2, -59, 6, -59, 8, -57, 12, -61, 19, -62, 23, -60)

[node name="Player" type="CharacterBody2D"]
scale = Vector2(1.25, 1.25)
collision_mask = 31
script = ExtResource("1_xwv05")
max_speed = 750

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y2yur")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(37, -1)
rotation = 1.48353
texture = ExtResource("1_gseue")

[node name="LaserStartPositions" type="Node2D" parent="PlayerImage"]
position = Vector2(1, 37)
rotation = -1.5708

[node name="Marker2D" type="Marker2D" parent="PlayerImage/LaserStartPositions"]
position = Vector2(132, 18)

[node name="Marker2D2" type="Marker2D" parent="PlayerImage/LaserStartPositions"]
position = Vector2(130, 8)

[node name="Marker2D3" type="Marker2D" parent="PlayerImage/LaserStartPositions"]
position = Vector2(128, 27)

[node name="LaserReloadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeReloadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserParticles" type="GPUParticles2D" parent="."]
position = Vector2(134, 10)
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_g3k3s")
texture = ExtResource("3_24og8")
lifetime = 0.3
one_shot = true
explosiveness = 1.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_et010")

[connection signal="timeout" from="LaserReloadTimer" to="." method="_on_laser_reload_timer_timeout"]
[connection signal="timeout" from="GrenadeReloadTimer" to="." method="_on_grenade_reload_timer_timeout"]
